Updated for 2022 annual report

--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -230,7 +230,7 @@ Alonso-Ovalle, Luis \textit{\&} Justin Royer. 2021. Random Choice from Likelihoo
 
 %Journal of Semantics, Volume 38, Issue 4, November 2021, Pages 483–529, https://doi.org/10.1093/jos/ffab009
 
-Alonso-Ovalle, Luis \textit{\&} Henrison Hsieh. 2021. Causes and expectations: On the interpretation of the Tagalog Ability / Involuntary Action form, \textit{Journal of Semantics}, 38(3), 441-472.% \hspace*{\hfill} (\href{https://doi.org/10.1093/jos/ffab008}{https://doi.org/10.1093/jos/ffab008}).
+Alonso-Ovalle, Luis \textit{\&} Henrison Hsieh. 2021. Causes and Expectations: On the Interpretation of the Tagalog Ability / Involuntary Action form, \textit{Journal of Semantics}, 38(3), 441-472.% \hspace*{\hfill} (\href{https://doi.org/10.1093/jos/ffab008}{https://doi.org/10.1093/jos/ffab008}).
 
 Alonso-Ovalle, Luis \textit{\&} Paula Men\'endez-Benito. 2018. Projecting Possibilities in the Nominal Domain. Spanish \textit{Uno Cualquiera}, \textit{Journal of Semantics}. 35:1, 1-41. %\\
 %\hspace*{\hfill}(\href{https://doi.org/10.1093/jos/ffx011}{https://doi.org/10.1093/jos/ffx011})
@@ -354,9 +354,9 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 
 Alonso-Ovalle, Luis and Jonathan Palucci. (forthcoming) Obligatory Wide Scope for \textit{Any} DPs?, \textit{Proceedings of the Thirty-Ninth West Coast Conference on Formal Linguistics}.
 
-Alonso-Ovalle, Luis and Justin Royer. 2021. Modality in the Nominal Domain: The Chuj \textit{yalnhej}+ wh Series, \textit{Proceedings of the Thirty-first Semantics and Linguistic Theory Conference}, ed. by Nicole Dreier, Chloe Kwon, Thomas Darnell, and John Starr, CLC Publications, Cornell University, pp. 061-081.
+Alonso-Ovalle, Luis and Justin Royer. 2021. Modality in the Nominal Domain: \textit{Yalnhej} DPs in Chuj, \textit{Proceedings of the Thirty-First Semantics and Linguistic Theory Conference}, ed. by Nicole Dreier, Chloe Kwon, Thomas Darnell, and John Starr, CLC Publications, Cornell University, pp. 061-081.
 
-Alonso-Ovalle, Luis and Jonathan Palucci. 2021. Numeral \textit{Any}: in Favor of Viability, \textit{Proceedings of the Fifty-first Annual Meeting of the North East Linguistic Society}, ed. by Alessa Farinella and Angelica Hill, University of Massachusetts, Amherst, MA: Graduate Linguistics Student Association, pp 1-11.
+Alonso-Ovalle, Luis and Jonathan Palucci. 2021. Numeral \textit{Any}: in Favor of Viability, \textit{Proceedings of the Fifty-First Annual Meeting of the North East Linguistic Society}, ed. by Alessa Farinella and Angelica Hill, University of Massachusetts, Amherst, MA: Graduate Linguistics Student Association, pp 1-11.
 
  Alonso-Ovalle, Luis and Esmail Moghiseh. 2021. Numeral \textit{Any}: the View from Farsi, \textit{Proceedings of the Thirtieth Semantics and Linguistic Theory Conference}, ed. by Joseph Rhyne, Kaelyn Lamp, Nicole Dreier, and Chloe Kwon, CLC Publications, Cornell University, pp. 485-503. %{\footnotesize [\href{https://doi.org/10.3765/salt.v30i0.4829}{https://doi.org/10.3765/salt.v30i0.4829}]}
 
@@ -616,17 +616,16 @@ University of T\"ubingen, January 2010 [presented by co-author.]
 
 \subsubsection*{Papers Delivered}
 
-``Sub-eventive Modal Projection:
-The Case of Spanish Subjunctive Relative Clauses'' (with Paula Men\'endez-Benito and Aynat Rubinstein), \textit{52nd
-  Meeting of the North East Linguistic Society}, Rutgers University [virtually], October 31st, 2021.
+``Sub-Eventive Modal Projection:
+The Case of Spanish Subjunctive Relative Clauses'' (with Paula Men\'endez-Benito and Aynat Rubinstein), \textit{Fifty-Second Meeting of the North East Linguistic Society}, Rutgers University [virtually], October 31st, 2021.
 
 
-``Sub-eventive Modal Projection:
+``Sub-Eventive Modal Projection:
 The Case of Spanish Subjunctive Relative Clauses'' (with Paula Men\'endez-Benito and Aynat Rubinstein), \textit{SENSUS 2, Constructing Meaning in Romance}, University of Massachusetts at Amherst [virtually], October 2, 2021.
 
-``Modality in the nominal domain: The Chuj \textit{yalnhej+wh} series'' (with Justin Royer), \textit{Thirty-First Semantics and Linguistic Theory Conference}, Brown University [virtually], May 7, 2021.
+``Modality in the nominal domain: The Chuj \textit{Yalnhej+wh} Series'' (with Justin Royer), \textit{Thirty-First Semantics and Linguistic Theory Conference}, Brown University [virtually], May 7, 2021.
 
-``Concessive scalar items: Symmetric vs. non-symmetric alternatives'' (with Elizabeth Heredia-Murillo), \textit{SENSUS, Constructing Meaning in Romance}, University of Massachusetts at Amherst [virtually], September 27, 2020.
+``Concessive scalar items: Symmetric vs. Non-symmetric Alternatives'' (with Elizabeth Heredia-Murillo), \textit{SENSUS, Constructing Meaning in Romance}, University of Massachusetts at Amherst [virtually], September 27, 2020.
 
 ``Random-Choice Modality: The View from Chuj (Mayan)'' (with Justin Royer), \textit{Sinn und Bedeutung 24}, University of Osnabr\"{u}ck, September 5, 2019. [presented by co-author.]
 
@@ -634,7 +633,7 @@ The Case of Spanish Subjunctive Relative Clauses'' (with Paula Men\'endez-Benito
 
 ``Number Inflection, Spanish Bare Interrogatives, and Higher-Order Quantification'' (with Vincent Rouillard), \textit{Going Romance}, University of Utrecht, December 12, 2018 [presented by co-author.]
 
-``Number Inflection, Spanish Bare Interrogatives, and Higher-Order Quantification'' (with Vincent Rouillard), \textit{49th
+``Number Inflection, Spanish Bare Interrogatives, and Higher-Order Quantification'' (with Vincent Rouillard), \textit{Forty-Ninth
   Meeting of the North East Linguistic Society}, Cornell University, October 6 2018.
 
 ``Contradiction-Free Strengthening and Alternative Discharge: Farsi \textit{i}-Indefinites'' (with Esmail Moghiseh), \textit{Sinn und Bedeutung 23}, Centre de Ling\"{u}\'istica Te\`orica, Universitat Aut\`onoma de Barcelona, September 6, 2018.
@@ -646,18 +645,17 @@ The Case of Spanish Subjunctive Relative Clauses'' (with Paula Men\'endez-Benito
 
 ``Overcoming the Unexpected: The Tagalog Ability/Involuntary Action Form'' (with Henrison Hsieh),  \textit{Thirty-Fifth West Coast Conference on Formal Linguistics}, University of Calgary, April 28, 2017 [presented by co-author.]
 
-``Overcoming the Unexpected: the Tagalog Ability / Involuntary Action Verbal Inflection'' (with Henrison Hsieh), \textit{35h Annual West Coast Conference on Formal Linguistics}, University of Calgary, April 28, 2017 [presented by co-author.]
 
-``Anchored implicatives: Tagalog Ability/Involuntary Action'' (with Henrison Hsieh), \textit{The 34th meeting of the Austronesian Formal Linguistics}, the University of Washington, April 9, 2017. [presented by co-author.]
+``Anchored implicatives: Tagalog Ability/Involuntary Action'' (with Henrison Hsieh), \textit{The Thirty-Fourth meeting of the Austronesian Formal Linguistics}, the University of Washington, April 9, 2017. [presented by co-author.]
 
-``Spanish \textit{Siquiera} in the \textsc{Even} Landscape.", \textit{Chicago Linguistics Society 52nd Annual Meeting}, University of Chicago, April 21, 2016. 
+``Spanish \textit{Siquiera} in the \textsc{Even} Landscape.", \textit{Chicago Linguistics Society Fifty-Second Annual Meeting}, University of Chicago, April 21, 2016. 
 
 ``Puzzling over Epistemic Indefinites, Again." (with Paula
 Men\'endez-Benito), \textit{Workshop on Epistemic Modality and Reference}, Universit\'e de Toulouse [presented by co-author.]
 
 ``Epistemic Indefinites and Evidential Constraints:
 Spanish \textit{Alg\'un}''  (with Paula
-Men\'endez-Benito), \textit{19th Amsterdam Colloquium}, University of Amsterdam,
+Men\'endez-Benito), \textit{Nineteenth Amsterdam Colloquium}, University of Amsterdam,
 December 18, 2013.
 
 ``Modal Indefinites and Their Competitors: \textit{Alg\'un
@@ -678,14 +676,14 @@ University of G\"{o}ttingen and Lichtenberg-Kolleg, June 2010.
 
 ``Epistemic Effects and Plurality'' (with Paula
 Men\'endez-Benito), \textit{Workshop on Indefinites
-  Crosslinguistically, 32nd Meeting of the German Linguistic Society},
+  Crosslinguistically, Thirty-Second Meeting of the German Linguistic Society},
 Humboldt University, Berlin, February 2010.
 
 ``Modal Indefinites and Domain Constraints'' (with Paula
 Men\'endez-Benito), \textit{Workshop on Reference and Discourse
   Structure}, University of Stuttgart, January 2010 [presented by co-author].
 
-``Plural Epistemic Indefinites'' (with Paula Men\'endez-Benito), \textit{40th
+``Plural Epistemic Indefinites'' (with Paula Men\'endez-Benito), \textit{Fortieth
   Meeting of the North East Linguistic Society}, M.I.T., October 2009.
 
 ``Distributed Plurality in Spanish: \textit{Unos} vs. \textit{Algunos}''  (with Paula Men\'endez-Benito), \textit{Sinn und Bedeutung} 14, University of Vienna, September 2009 [presented by co-author].
@@ -694,7 +692,7 @@ Men\'endez-Benito), \textit{Workshop on Reference and Discourse
   Paula Men\'endez-Benito and Florian Schwarz), \textit{M.I.T Workshop in
   Honor of Prof. Angelika Kratzer}, December 2008.
 
-``Minimal Domain Widening'' (with Paula Men\'endez-Benito), \textit{27th West Coast Conference on
+``Minimal Domain Widening'' (with Paula Men\'endez-Benito), \textit{Twenty-Seventh West Coast Conference on
   Formal Linguistics}, University of California Los Angeles, May 2008, 
 
 ``Another Look at Indefinites in Islands'' (with Paula
@@ -702,10 +700,10 @@ Men\'endez-Benito), \textit{Workshop on Reference and Discourse
   Across Languages}, Humboldt-Universitat zu Berlin, July 6
   -7, July 2007 [presented by co-author.]
 
-``Alternatives in the Disjunctive Antecedents Problem'', \textit{26th West Coast Conference on Formal Linguistics}, University of California Berkeley, April 2007.
+``Alternatives in the Disjunctive Antecedents Problem'', \textit{Twenty-Sixth West Coast Conference on Formal Linguistics}, University of California Berkeley, April 2007.
 
 
-``Disjunctive Counterfactuals in a Hamblin Semantics'', \textit{33rd Meeting of the Berkeley Linguistics Society}, University of California Berkeley, February 2007. 
+``Disjunctive Counterfactuals in a Hamblin Semantics'', \textit{Thirty-Third Meeting of the Berkeley Linguistics Society}, University of California Berkeley, February 2007. 
 
 ``Identity Preserving \textit{Or}: Disjunction in Alternative Semantics'', \textit{The Linguistic Society of America Summer Institute}, Massachusetts Institute of Technology \& Harvard University, August 2005. 
 
@@ -713,7 +711,7 @@ Men\'endez-Benito), \textit{Workshop on Reference and Discourse
 
 ``Equal Rights for Every Disjunct! Quantification over Alternatives or Pointwise Context Change?'', \textit{Sinn und Bedeutung 9}, University of Nijmegen, November 2004. 
 
-``Simplification of Disjunctive Antecedents in a Hamblin Semantics'', \textit{35th
+``Simplification of Disjunctive Antecedents in a Hamblin Semantics'', \textit{Thirty-Fifth
   Meeting of the North East Linguistic Society}, State University of New York at Stony Brook, November 2003. 
 
 ``Two Types of Indefinites'' (with Paula Men\'endez-Benito), \textit{Sinn und Bedeutung} 7, University of Konstanz, October 2002. 
@@ -740,19 +738,19 @@ Men\'endez-Benito), \textit{Workshop on Reference and Discourse
 
 \subsubsection*{Poster Presentations}
 
-``Against Wide Scope \textit{Any}'' (with Esmail Mogiseh and Jonathan Palucci), \textit{39th Annual West Coast Conference on Formal Linguistics}, University of Arizona [online meeting], April 9, 2021.
+``Against Wide Scope \textit{Any}'' (with Esmail Mogiseh and Jonathan Palucci), \textit{Thirty-Ninth Annual West Coast Conference on Formal Linguistics}, University of Arizona [online meeting], April 9, 2021.
 
 ``Concessive Scalar Items: More about \textit{Siquiera} in Spanish'' (with Elizabeth Heredia-Murillo),
 \textit{Going Romance 34}, Paris-8 \& CNRS, November 26, 2020 [Flash talk, virtual meeting]
 
 ``Numeral
-\textit{Any}: In Favor of Viability'' (with Jonathan Palucci),  \textit{51th Meeting of the
+\textit{Any}: In Favor of Viability'' (with Jonathan Palucci),  \textit{Fifty-First Meeting of the
   North East Linguistic Society}, Universit\'e de Qu\'ebec \`a
 Montr\'eal, November 6, 2020 [Flash talk, virtual meeting.]
 
 ``Numeral \textit{Any}: the View from Farsi'' (with Esmail Mogiseh), \textit{Thirtieth Semantics and Linguistic Theory Conference}, Cornell University, August 2020, [virtual meeting.]
 
-``Neutralizing Free Choice items via domain restriction: Farsi \textit{-i} indefinites'', (with Esmail Mogiseh), \textit{12th Toronto-Ottawa-Montreal Workshop in Semantics}, March 30, 2019, Concordia University, Montreal.
+``Neutralizing Free Choice items via domain restriction: Farsi \textit{-i} indefinites'', (with Esmail Mogiseh), \textit{Twelfth Toronto-Ottawa-Montreal Workshop in Semantics}, March 30, 2019, Concordia University, Montreal.
 
 ``La expresi\'on de la modalidad de decisi\'on arbitraria en Chuj'' (with Justin Royer), \textit{Form and Analysis in Mayan Linguistics 5}, August 10-11, 2018, Antigua. Guatemala, Centro de Formaci\'on de la Cooperaci\'on Espa\~nola en Antigua, Guatemala [presented by co-author.]
 
@@ -761,7 +759,7 @@ Montr\'eal, November 6, 2020 [Flash talk, virtual meeting.]
 ``Causes and Expectations: On the Interpretation of the Tagalog Ability/Involuntary Action Verbal Inflection'' (with Henrison Hsieh), \textit{Twenty-Seventh Semantics and Linguistic Theory Conference}, University of Maryland, May 2017. 
 
 
-``Are All Concessive Scalar Particles the Same? Probing into Spanish \textit{Siquiera}, \textit{Semantics and Linguistic Theory 26}, University of Texas Austin, May 2016. 
+``Are All Concessive Scalar Particles the Same? Probing into Spanish \textit{Siquiera}'', \textit{Semantics and Linguistic Theory 26}, University of Texas Austin, May 2016. 
 
 ``Modal Selectivity in the Nominal Domain: Spanish \textit{Uno Cualquiera}'' (with Paula Men\'endez-Benito), \textit{46th Meeting of the North East Linguistic Society}, Concordia University, Montreal, October 2015. 
 
@@ -844,22 +842,31 @@ LLCU 610: Fundamentals of Linguistics for Language Teaching (Winter 2013.)
 \subsubsection*{PhD Dissertations}
 
 
+
+\subsubsection*{Completed}
+
+Brian Buccola, ``Maximality in the Semantics of Modified Numerals", (co-supervised with Bernhard Schwarz, successfully defended in August 2015.)
+
+Francesco Gentile, ``Non-Local Modification'', (co-supervised with Bernhard Schwarz and Junko Shimoyama, successfully defended on December 9, 2019.)
+
+Dan Goodhue, ``On Asking and Answering Biased Polar Questions", (co-supervised with Bernhard Schwarz and Michael Wagner, successfully defended in February 2018.)
+
+Jozina van der Klok, ``Tense and Aspect Markers in Javanese'',
+(co-supervised with Lisa Travis, successfully defended in November
+2012.)
+
+\vspace{-10pt}
+
+\subsubsection*{In progress}
+
+William Johnston, ``Serial Verb Constructions in Hmong,'' (co-supervised with Jessica Coon, in progress.) 
+
 Esmail Moghiseh, ``Free Choice in Farsi'', (in progress)
 
 Mathieu Paill\'e, ``Local Exh'', (co-supervised with Bernhard Schwarz, in progress.)
 
 Justin Royer, ``Topics in Chuj DPs'', (co-supervised with Jessica Coon and Aron Hirsch, in progress.)
 
-
-Francesco Gentile, ``Non-Local Modification'', (co-supervised with Bernhard Schwarz and Junko Shimoyama, successfully defended on December 9, 2019.)
-
-Dan Goodhue, ``On Asking and Answering Biased Polar Questions", (co-supervised with Bernhard Schwarz and Michael Wagner, successfully defended in February 2018.)
-
-Brian Buccola, ``Maximality in the Semantics of Modified Numerals", (co-supervised with Bernhard Schwarz, successfully defended in August 2015.)
-
-Jozina van der Klok, ``Tense and Aspect Markers in Javanese'',
-(co-supervised with Lisa Travis, successfully defended in November
-2012.)
 
 \vspace{-10pt}
 
@@ -878,42 +885,48 @@ Alexandra Simonenko, ``Grammatical Ingredients of Definiteness'',
 
 \subsubsection*{(Co-)Supervisor}
 
-Jonathan Palucci, ``Unifying English Causative and Experiencer \textit{Have} : The Affected Argument'' (co-supervised with Jessica Coon, in progress).
+\subsubsection*{Completed}
 
-Jonathan Palucci, ``On the Scope Effects of \textit{Any}.'', (successfully defended in May 2021).
-
-Will Johnston, ``\textit{Again} and Intensional Transitive Verbs'', (co-supervised with Junko Shimoyama, succesfully defended in January 2021).
-
-Esmail Moghiseh, ``Uniqueness and Existential Free Choice Items in Farsi" (successfully defended in July 2020).
-
-Mathieu Paill\'e, ``Term Colors and Exhaustive Readings.'' (co-supervised with Bernhard Schwarz, successfully defended in June 2020)
-
-Will Johnston, ``Questions and Cumulative Readings'', (co-supervised with Bernhard Schwarz, succesfully defended in May 2020).
 
 Amy Bruno, ``Contrastive negation and Presuppositional Alternatives'', (co-supervised with Bernhard Schwarz, successfully defended in May 2017.)
-
-Dejan Milacic, ``Irrealis Mood in Kabyle'' (successfully defended in summer 2017.)
 
 Francesco Gentile, ``Adjectives as Reduced Relative Clauses?
 The case of Italian Prenominal and Postnominal adjectives.'', (successfully defended in April  2017.)
 
+Dan Goodhue, ``On the Presuppositions of Epistemic \textit{Must}", (co-supervised with Bernhard Schwarz, successfully defended in March 2015.)
+
 Henrison Hsieh, ``An Additional Inference for Actuality Entailments'',
 (co-supervised with Bernhard Schwarz, successfully defended in June 2015.)
 
-Dan Goodhue, ``On the Presuppositions of Epistemic \textit{Must}", (co-supervised with Bernhard Schwarz, successfully defended in March 2015.)
+Will Johnston, ``Questions and Cumulative Readings'', (co-supervised with Bernhard Schwarz, succesfully defended in May 2020).
 
+Will Johnston, ``\textit{Again} and Intensional Transitive Verbs'', (co-supervised with Junko Shimoyama, succesfully defended in February 2021).
 
 Oriana Kilbourn-Cer\'on, ``\textit{Almost}'', (co-supervised with Bernhard Schwarz,
 successfully defended in August 2013.) 
 
-Gretchen McCulloch, ``Modal Indefinites in Mi'gmaq: \textit{Tampas}'', (successfully defended in July 2013.)
+Gretchen McCulloch, ``Modal Indefinites in Mi'gmaq: \textit{Tampas}'', (defended in July 2013.)
 
 Alanah McKillen, ``Focus and Binding'' (co-supervised with Yosef
 Grodzinsky, successfully defended in August 2013.)
 
+Dejan Milacic, ``Irrealis Mood in Kabyle'' (defended in summer 2017.)
+
+Esmail Moghiseh, ``Uniqueness and Existential Free Choice Items in Farsi" (successfully defended in July 2020).
+
 Marzieh Mortazavinia, ``\textit{Even} and \textit{Only}''
 (co-supervised with Bernhard Schwarz, successfully defended in July
 2013. )
+
+Mathieu Paill\'e, ``Term Colors and Exhaustive Readings.'' (co-supervised with Bernhard Schwarz, successfully defended in June 2020)
+
+Jonathan Palucci, ``On the Scope Effects of \textit{Any}.'', (successfully defended in May 2021).
+
+
+\subsubsection*{In Progress}
+
+
+Jonathan Palucci, ``Unifying English Causative and Experiencer \textit{Have} : The Affected Argument'' (co-supervised with Jessica Coon, in progress).
 
 
 \subsubsection*{Committee Member}
@@ -954,7 +967,9 @@ Jason Borga, ``Topics on sluicing'', (Co-supervised with Aron Hirsch and Bernhar
 
 Erica Brandao, ``Brazilian Portuguese \textit{Algum}.'' (ARIA award, summer 2019) (not completed.)
 
-Esmail Moghiseh, 2018. ``Contradiction free strengthening and exhaustification: Persian -\textit{I} indefinites'.' 
+Danielle Celone, 2021. ``The N'Importe Qu- Series." 
+
+Esmail Moghiseh, 2018. ``Contradiction free strengthening and exhaustification: Persian -\textit{I} indefinites''. 
 
 \subsection*{University of Massachusetts Boston (2006-2011)}
 
@@ -1273,6 +1288,8 @@ proposals; Spring 2010: one book
 proposal; Spring 2011: one book proposal; Winter 2012: one book
 proposal; Fall 2012: one book proposal; Fall 2015: one book proposal; Winter 2016: one book proposal), Oxford University Press (Fall 2020: one book proposal.)
 
+Reviewer for the Real Academia Espa\~nola (chapters 19 and 20 of the \textit{Nueva gramática de la lengua española} April, 2021.)
+
 Reviewed section manuscripts for edited volumes: 
 \begin{itemize}
 \item[] \textit{Wiley Blackwell Semantics Companion}, Wiley-Blackwell, edited by Lisa Matthewson \textit{et al.}
@@ -1290,15 +1307,17 @@ Reviewed section manuscripts for edited volumes:
 Abstract reviewer for conferences:
 
 \begin{itemize}
-\item[] \textit{Semantics and Linguistic Theory} (2007 --).
-\item[] \textit{Sinn und Bedeutung} (2009 -- ).
 \item [] \textit{Amsterdam Colloquium} (2012, 2013, 2015, 2017, 2019)
-\item[] \textit{North East Linguistics Society} (2009 -- )
-\item[] \textit{West Coast Conference on Formal Linguistics} (2012 -- )
-\item[] \textit{Generative Linguistics in the Old World} (2012, 2014, 2017)
 \item[] Canadian Linguistics Association Meeting Program Committee member (2014 -- 2015, 2019, 2020)
+\item[] \textit{Generative Linguistics in the Old World} (2012, 2014, 2017)
+\item[] \textit{Incontro di Grammatica Generativa} (2021)
 \item[] \textit{32nd Linguistic Symposium on Romance Languages}, University of Toronto.
-\item[] \textsc{sensus}, University of Massachusetts at Amherst (2020).
+\item[] \textit{North East Linguistics Society} (2009 -- )
+\item[] \textit{Semantics and Linguistic Theory} (2007 --)
+\item[] Seoul International Conference on Generative Grammar (2021)
+\item[] \textsc{sensus}, University of Massachusetts at Amherst (2020, 2021).
+\item[] \textit{Sinn und Bedeutung} (2009 -- ).
+\item[] \textit{West Coast Conference on Formal Linguistics} (2012 -- )
 \end{itemize}
 
 
@@ -1315,6 +1334,10 @@ Reviewer for funding agencies:
 
 
 External examiner, pre-tenure formal review, Department of Linguistics, the University of Utah.
+
+Tenure case reviewer, CUNY graduate center (2021).
+
+Promotion to full professor reviewer, Concordia University (2021).
 
 
 \subsection*{Outreach}
