--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -520,6 +520,8 @@ Alonso-Ovalle, Luis. (ed.) 2003. \emph{On Semantic Processing, University of Mas
 
 \subsection*{Invited Talks}
 
+``Singular Bare Interrogatives: a Case for Higher Order Quantification, a Weak Singular and Strong Plural'', (with Vincent Rouillard), S\'eminaire SynSem, Laboratoire de Linguistique, University of Nantes, France, April 1, 2022.
+
 ``Random Choice Indefinites: \textit{Uno Cualquiera}'', (with Paula Men\'endez-Benito), invited talk at semantics seminar (LING 879: Modality: Themes and Variations on Force and Flavor), University of Maryland, March 24, 2021.
 
 ``Spanish Bare Interrogatives and Number'', (with Vincent Rouillard), SENSUS, Constructing Meaning in Romance, University of Massachusetts, Amherst (online meeting), September 26, 2020.
@@ -842,7 +844,6 @@ LLCU 610: Fundamentals of Linguistics for Language Teaching (Winter 2013.)
 \subsubsection*{PhD Dissertations}
 
 
-
 \subsubsection*{Completed}
 
 Brian Buccola, ``Maximality in the Semantics of Modified Numerals", (co-supervised with Bernhard Schwarz, successfully defended in August 2015.)
@@ -871,6 +872,8 @@ Justin Royer, ``Topics in Chuj DPs'', (co-supervised with Jessica Coon and Aron 
 \vspace{-10pt}
 
 \subsubsection*{Committee Member}
+
+Elizabeth Heredia-Murillo, University of Nantes / University of Gr\"{o}ningen.
 
 Alanah McKillen, ``On the interpretation of reflexive pronouns'', (succesfully defended in March 2016).
 
@@ -1060,7 +1063,10 @@ Prof.\ Barbara H. Partee. Duties included grading, preparing and teaching severa
  Intermediate level), designing full structure of the course,
  including syllabus, teaching materials and evaluation of students.
 
-\subsection*{\textbf{Previous Experience}}
+\subsection*{\textbf{Other}}
+
+29-31 March, 2022, six-hour workshop on intensional semantics, Laboratoire de Linguistique, University of Nantes. 
+
 Fall 1999, Teaching Assistant, Spanish Department, Amherst College.
 
 Summer 1996,  Institute for the Cooperation with Latin America Fellow,  Spanish Foreign Office. Duties included teaching two seminars on Structuralist Approaches to the Syntax of Spanish at the National University, C\'ordoba (Argentina).
