--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -925,11 +925,11 @@ Mathieu Paill\'e, ``Term Colors and Exhaustive Readings.'' (co-supervised with B
 
 Jonathan Palucci, ``On the Scope Effects of \textit{Any}.'', (successfully defended in May 2021).
 
+Jonathan Palucci, ``Modal Ingredients of \textit{Have}: Disentangling Causers from Engineers'' (eval 2, co-supervised with Jessica Coon, successfully defended on April 7, 2022).
 
-\subsubsection*{In Progress}
 
+%\subsubsection*{In Progress}
 
-Jonathan Palucci, ``Unifying English Causative and Experiencer \textit{Have} : The Affected Argument'' (co-supervised with Jessica Coon, in progress).
 
 
 \subsubsection*{Committee Member}
