--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -352,6 +352,8 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 
 \subsection*{Proceedings Papers}
 
+Alonso-Ovalle, Luis, Paula Men\'endez-Benito and Aynat Rubinstein. (forthcoming) Event-Dependent Modal Projection: The Case of Spanish Subjunctive Relative Clauses, \textit{Proceedings of the Fifty-Second Annual Meeting of the North East Linguistic Society.}
+
 Alonso-Ovalle, Luis and Jonathan Palucci. (forthcoming) Obligatory Wide Scope for \textit{Any} DPs?, \textit{Proceedings of the Thirty-Ninth West Coast Conference on Formal Linguistics}.
 
 Alonso-Ovalle, Luis and Justin Royer. 2021. Modality in the Nominal Domain: \textit{Yalnhej} DPs in Chuj, \textit{Proceedings of the Thirty-First Semantics and Linguistic Theory Conference}, ed. by Nicole Dreier, Chloe Kwon, Thomas Darnell, and John Starr, CLC Publications, Cornell University, pp. 061-081.
