--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -107,8 +107,8 @@ M.A., 2001   & Hispanic Linguistics, University of Massachusetts at Amherst\\
 \section*{Professional Experience}
 
 \begin{tabular}{p{2.815cm}p{280pt}}
-August 2016 -- & Associate Professor and Chair, Department of Linguistics\\
- &McGill University\\
+August 2016 -- &  Chair, Department of Linguistics\\
+ May 2022 &McGill University\\
  & \\[-8pt]
 August 2015 -- & Associate Professor, Department of Linguistics\\
  & McGill University\\
