--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -620,8 +620,11 @@ University of T\"ubingen, January 2010 [presented by co-author.]
 
 \subsubsection*{Papers Delivered}
 
+``Universal Force from Exhaustification:
+Farsi \textit{Hame} \textit{-i} DPs'' (with Esmail Moghiseh), \textit{Thirty-Second Semantics and Linguistic Theory Conference}, Colegio de M\'exico, Universidad Nacional Aut\'onoma de M\'exico [virtually], June 9, 2022.
+
 ``Sub-Eventive Modal Projection:
-The Case of Spanish Subjunctive Relative Clauses'' (with Paula Men\'endez-Benito and Aynat Rubinstein), \textit{Fifty-Second Meeting of the North East Linguistic Society}, Rutgers University [virtually], October 31st, 2021.
+The Case of Spanish Subjunctive Relative Clauses'' (with Paula Men\'endez-Benito and Aynat Rubinstein), \textit{Fifty-Second Meeting of the North East Linguistic Society}, Rutgers University [virtually], October 31, 2021.
 
 
 ``Sub-Eventive Modal Projection:
@@ -858,6 +861,9 @@ Jozina van der Klok, ``Tense and Aspect Markers in Javanese'',
 (co-supervised with Lisa Travis, successfully defended in November
 2012.)
 
+Justin Royer, ``Elements of (In)definiteness and Binding: A Mayan Perspective'', (co-supervised with Jessica Coon and Aron Hirsch, successfully defended in June
+2022.)
+
 \vspace{-10pt}
 
 \subsubsection*{In progress}
@@ -867,8 +873,6 @@ William Johnston, ``Serial Verb Constructions in Hmong,'' (co-supervised with Je
 Esmail Moghiseh, ``Free Choice in Farsi'', (in progress)
 
 Mathieu Paill\'e, ``Local Exh'', (co-supervised with Bernhard Schwarz, in progress.)
-
-Justin Royer, ``Topics in Chuj DPs'', (co-supervised with Jessica Coon and Aron Hirsch, in progress.)
 
 
 \vspace{-10pt}
