--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -223,7 +223,9 @@ Joseph P. Healey Grant Program (AY 2007-2009), Office of the Vice Provost for Re
 
 \subsection*{Journal Articles}
 
-Alonso-Ovalle, Luis \textit{\&} Aron Hirsch. (forthcoming) Keep \textit{Only} Strong,  \textit{Semantics and Pragmatics}.
+Alonso-Ovalle, Luis \textit{\&} Aron Hirsch. (2022) Keep \textit{Only} Strong,  \textit{Semantics and Pragmatics}, 15(6). \href{https://doi.org/10.3765/sp.15.6}{https://doi.org/10.3765/sp.15.6}
+%Full DOI: https://doi.org/10.3765/sp.15.6
+%Short DOI: https://doi.org/h2wp
 
 Alonso-Ovalle, Luis \textit{\&} Justin Royer. 2021. Random Choice from Likelihood: The Case of Chuj (Mayan), \textit{Journal of Semantics}, 38(4), 483-529. 
 %\\ \hspace*{\hfill}(\href{https://doi.org/10.1093/jos/ffab009}{https://doi.org/10.1093/jos/ffab009})
