--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -863,6 +863,9 @@ Jozina van der Klok, ``Tense and Aspect Markers in Javanese'',
 (co-supervised with Lisa Travis, successfully defended in November
 2012.)
 
+
+Mathieu Paill\'e, ``Local Exh'', (co-supervised with Bernhard Schwarz, successfully defended in August 2022.)
+
 Justin Royer, ``Elements of (In)definiteness and Binding: A Mayan Perspective'', (co-supervised with Jessica Coon and Aron Hirsch, successfully defended in June
 2022.)
 
@@ -873,9 +876,6 @@ Justin Royer, ``Elements of (In)definiteness and Binding: A Mayan Perspective'',
 William Johnston, ``Serial Verb Constructions in Hmong,'' (co-supervised with Jessica Coon, in progress.) 
 
 Esmail Moghiseh, ``Free Choice in Farsi'', (in progress)
-
-Mathieu Paill\'e, ``Local Exh'', (co-supervised with Bernhard Schwarz, in progress.)
-
 
 \vspace{-10pt}
 
