--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -354,7 +354,7 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 
 \subsection*{Proceedings Papers}
 
-Alonso-Ovalle, Luis, Paula Men\'endez-Benito and Aynat Rubinstein. (forthcoming) Event-Dependent Modal Projection: The Case of Spanish Subjunctive Relative Clauses, \textit{Proceedings of the Fifty-Second Annual Meeting of the North East Linguistic Society.}
+Alonso-Ovalle, Luis, Paula Men\'endez-Benito and Aynat Rubinstein. (2022) Event-Dependent Modal Projection: The Case of Spanish Subjunctive Relative Clauses, \textit{Proceedings of the Fifty-Second Annual Meeting of the North East Linguistic Society}, ed. by \"{O}zge Bakay, Breanna Pratley, Eva Neu and Peyton Deal, University of Massachusetts, Amherst, MA: Graduate Linguistics Student Association, pp 15-28.
 
 Alonso-Ovalle, Luis and Jonathan Palucci. (forthcoming) Obligatory Wide Scope for \textit{Any} DPs?, \textit{Proceedings of the Thirty-Ninth West Coast Conference on Formal Linguistics}.
 
