--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -354,6 +354,8 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 
 \subsection*{Proceedings Papers}
 
+Alonso-Ovalle, Luis and Esmail Moghiseh. 2022. Farsi \textit{Hame -i} DPs and Intensional Transitive Verbs, \textit{Proceedings of the 23rd Amsterdam Colloquium}, ed. by Marco Degano, Tom Roberts, Giorgio Sbardolini and Marieke Schouwstra, pp 214-220.\\ \hspace*{\fill} \href{https://events.illc.uva.nl/AC/AC2022/Proceedings/}{https://events.illc.uva.nl/AC/AC2022/Proceedings/}
+
 Alonso-Ovalle, Luis, Paula Men\'endez-Benito and Aynat Rubinstein. 2022. Event-Dependent Modal Projection: The Case of Spanish Subjunctive Relative Clauses, \textit{Proceedings of the Fifty-Second Annual Meeting of the North East Linguistic Society}, ed. by \"{O}zge Bakay, Breanna Pratley, Eva Neu and Peyton Deal, University of Massachusetts, Amherst, MA: Graduate Linguistics Student Association, pp 15-28.
 
 Alonso-Ovalle, Luis and Jonathan Palucci. (forthcoming) Obligatory Wide Scope for \textit{Any} DPs?, \textit{Proceedings of the Thirty-Ninth West Coast Conference on Formal Linguistics}.
@@ -747,7 +749,9 @@ Men\'endez-Benito), \textit{Workshop on Reference and Discourse
 
 \subsubsection*{Poster Presentations}
 
-``Against Wide Scope \textit{Any}'' (with Esmail Mogiseh and Jonathan Palucci), \textit{Thirty-Ninth Annual West Coast Conference on Formal Linguistics}, University of Arizona [online meeting], April 9, 2021.
+``Two Types of Intensional Transitive Verbs: The View from Farsi'' (with Esmail Moghiseh), \textit{The 23rd Amsterdam Colloquium}, University of Amsterdam [online presentation], December 20, 2022.
+
+``Against Wide Scope \textit{Any}'' (with Esmail Moghiseh and Jonathan Palucci), \textit{Thirty-Ninth Annual West Coast Conference on Formal Linguistics}, University of Arizona [online meeting], April 9, 2021.
 
 ``Concessive Scalar Items: More about \textit{Siquiera} in Spanish'' (with Elizabeth Heredia-Murillo),
 \textit{Going Romance 34}, Paris-8 \& CNRS, November 26, 2020 [Flash talk, virtual meeting]
