--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -354,7 +354,10 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 
 \subsection*{Proceedings Papers}
 
-Alonso-Ovalle, Luis and Esmail Moghiseh. 2022. Farsi \textit{Hame -i} DPs and Intensional Transitive Verbs, \textit{Proceedings of the 23rd Amsterdam Colloquium}, ed. by Marco Degano, Tom Roberts, Giorgio Sbardolini and Marieke Schouwstra, pp 214-220.\\ \hspace*{\fill} \href{https://events.illc.uva.nl/AC/AC2022/Proceedings/}{https://events.illc.uva.nl/AC/AC2022/Proceedings/}
+Alonso-Ovalle, Luis and Esmail Moghiseh. 2022. Universal Force from Exhaustification: Farsi \textit{Hame -i} DPs, \textit{Proceedings of the Thirty-Second Semantics and Linguistic Theory Conference}, ed. by John R. Starr, Juhyae Kim and Burak \"{O}ney, CLC Publications, Cornell University, pp. 619-638. %\\ \hspace*{\fill} \href{https://doi.org/10.3765/salt.v1i0.5401}{https://doi.org/10.3765/salt.v1i0.5401}
+
+
+Alonso-Ovalle, Luis and Esmail Moghiseh. 2022. Farsi \textit{Hame -i} DPs and Intensional Transitive Verbs, \textit{Proceedings of the 23rd Amsterdam Colloquium}, ed. by Marco Degano, Tom Roberts, Giorgio Sbardolini and Marieke Schouwstra, pp 214-220.%\\ \hspace*{\fill} \href{https://events.illc.uva.nl/AC/AC2022/Proceedings/}{https://events.illc.uva.nl/AC/AC2022/Proceedings/}
 
 Alonso-Ovalle, Luis, Paula Men\'endez-Benito and Aynat Rubinstein. 2022. Event-Dependent Modal Projection: The Case of Spanish Subjunctive Relative Clauses, \textit{Proceedings of the Fifty-Second Annual Meeting of the North East Linguistic Society}, ed. by \"{O}zge Bakay, Breanna Pratley, Eva Neu and Peyton Deal, University of Massachusetts, Amherst, MA: Graduate Linguistics Student Association, pp 15-28.
 
@@ -365,7 +368,6 @@ Alonso-Ovalle, Luis and Justin Royer. 2021. Modality in the Nominal Domain: \tex
 Alonso-Ovalle, Luis and Jonathan Palucci. 2021. Numeral \textit{Any}: in Favor of Viability, \textit{Proceedings of the Fifty-First Annual Meeting of the North East Linguistic Society}, ed. by Alessa Farinella and Angelica Hill, University of Massachusetts, Amherst, MA: Graduate Linguistics Student Association, pp 1-11.
 
  Alonso-Ovalle, Luis and Esmail Moghiseh. 2021. Numeral \textit{Any}: the View from Farsi, \textit{Proceedings of the Thirtieth Semantics and Linguistic Theory Conference}, ed. by Joseph Rhyne, Kaelyn Lamp, Nicole Dreier, and Chloe Kwon, CLC Publications, Cornell University, pp. 485-503. %{\footnotesize [\href{https://doi.org/10.3765/salt.v30i0.4829}{https://doi.org/10.3765/salt.v30i0.4829}]}
-
       
     Alonso-Ovalle, Luis and Justin Royer. 2020. Random choice modality: The view from Chuj (Mayan), \textit{Proceedings of the Twenty-Fourth Annual} Sinn und Bedeutung \textit{Conference}, ed. by Michael Franke, Nikola Kompa, Mingya Liu, Jutta L. Mueller, and Juliane Schwab, Osnabr\"{u}ck University, Humboldt University of Berlin, pp. 48-65. 
     %{\footnotesize [\href{https://semanticsarchive.net/Archive/mZhNDA4Y/SuB24-twovolume.pdf}{https://semanticsarchive.net/Archive/mZhNDA4Y/SuB24-twovolume.pdf}]}
