--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -223,6 +223,10 @@ Joseph P. Healey Grant Program (AY 2007-2009), Office of the Vice Provost for Re
 
 \subsection*{Journal Articles}
 
+Alonso-Ovalle, Luis \textit{\&} Elizabeth Heredia-Murillo. (forthcoming) Concessive Scalar Particles:
+Symmetric vs. Non-Symmetric Alternatives.
+The Case of Spanish \textit{Siquiera}, \textit{Glossa}.
+
 Alonso-Ovalle, Luis \textit{\&} Aron Hirsch. (2022) Keep \textit{Only} Strong,  \textit{Semantics and Pragmatics}, 15(6). \href{https://doi.org/10.3765/sp.15.6}{https://doi.org/10.3765/sp.15.6}
 %Full DOI: https://doi.org/10.3765/sp.15.6
 %Short DOI: https://doi.org/h2wp
