--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -73,7 +73,7 @@
 
 \section*{Contact Information}
 \begin{multicols}{2}
-Department of Linguisticss\\
+Department of Linguistics\\
 1085 Dr. Penfield\\
 Montr\'eal, Qu\'ebec, Canada, \textsc{h3a 1a7}\\
 \Telefon \hspace{2pt} \href{tel:0015143984353}{(001)$\cdot$514$\cdot$398$\cdot$4353}
