--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -227,7 +227,7 @@ Alonso-Ovalle, Luis \textit{\&} Elizabeth Heredia-Murillo. (forthcoming) Concess
 Symmetric vs. Non-Symmetric Alternatives.
 The Case of Spanish \textit{Siquiera}, \textit{Glossa}.
 
-Alonso-Ovalle, Luis \textit{\&} Aron Hirsch. (2022) Keep \textit{Only} Strong,  \textit{Semantics and Pragmatics}, 15(6). \href{https://doi.org/10.3765/sp.15.6}{https://doi.org/10.3765/sp.15.6}
+Alonso-Ovalle, Luis \textit{\&} Aron Hirsch. 2022. Keep \textit{Only} Strong,  \textit{Semantics and Pragmatics}, 15(6). \href{https://doi.org/10.3765/sp.15.6}{https://doi.org/10.3765/sp.15.6}
 %Full DOI: https://doi.org/10.3765/sp.15.6
 %Short DOI: https://doi.org/h2wp
 
