Revised teaching section, added publications

--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -828,22 +828,24 @@ Concord'' (with Elena Guerzoni), \textit{37th Meeting of the Chicago
 
 \subsubsection*{Undergraduate level}
 
-\textsc{Ling} 565: Pragmatics (Winter 2017, Winter 2019.)
-
-\textsc{Hisp} 501: History of the Spanish Language (Fall 2011; Fall 2015 (taught as \textsc{Hisp} 505, Seminar in Hispanic Studies.))
-
-\textsc{Hisp} 380: Global Spanish (Winter 2014.)
-
-\textsc{Hisp} 310: How Spanish Works (Fall 2012, Fall 2013, Fall 2014.)
-
-\textsc{Ling} 260: Meaning in Language (Fall 2017, Fall 2019, Fall 2021.)
+\textsc{Ling} 200: Introduction to the Study of Language (Fall 2015.)
 
 \textsc{Ling} 201: Introduction to Linguistics (Semantics and Pragmatics
 section), (Winter 2013.)
 
-\textsc{Ling} 200: Introduction to the Study of Language (Fall 2015.)
+\textsc{Ling} 260: Meaning in Language (Fall 2017, Fall 2019, Fall 2021.)
+
+\textsc{Ling} 565: Pragmatics (Winter 2017, Winter 2019.)
 
 \textsc{Hisp} 199 (First Year Seminar): Varieties of Spanish (Winter 2012.)
+
+\textsc{Hisp} 310: How Spanish Works (Fall 2012, Fall 2013, Fall 2014.)
+
+\textsc{Hisp} 380: Global Spanish (Winter 2014.)
+
+\textsc{Hisp} 501: History of the Spanish Language (Fall 2011; Fall 2015 (taught as \textsc{Hisp} 505, Seminar in Hispanic Studies.))
+
+
 
 \subsubsection*{Graduate level}
 
@@ -1332,7 +1334,7 @@ Abstract reviewer for conferences:
 
 \begin{itemize}
 \item [] \textit{Amsterdam Colloquium} (2012, 2013, 2015, 2017, 2019)
-\item[] Canadian Linguistics Association Meeting Program Committee member (2014 -- 2015, 2019, 2020)
+\item[] Canadian Linguistics Association Meeting Program Committee member (2014 -- 2015, 2019, 2020, 2021, 2022)
 \item[] \textit{Generative Linguistics in the Old World} (2012, 2014, 2017)
 \item[] \textit{Incontro di Grammatica Generativa} (2021)
 \item[] \textit{32nd Linguistic Symposium on Romance Languages}, University of Toronto.
