Glossa paper info

--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -223,10 +223,11 @@ Joseph P. Healey Grant Program (AY 2007-2009), Office of the Vice Provost for Re
 
 \subsection*{Journal Articles}
 
-Alonso-Ovalle, Luis \textit{\&} Elizabeth Heredia-Murillo. (forthcoming) Concessive Scalar Particles:
+Alonso-Ovalle, Luis \textit{\&} Elizabeth Heredia-Murillo. (2023) Concessive Scalar Particles:
 Symmetric vs. Non-Symmetric Alternatives.
-The Case of Spanish \textit{Siquiera}, \textit{Glossa}.
+The Case of Spanish \textit{Siquiera}, \textit{Glossa: A Journal of General Linguistics}, 8(1). \href{https://doi.org/10.16995/glossa.8574}{https://doi.org/10.16995/glossa.8574}
 
+ 
 Alonso-Ovalle, Luis \textit{\&} Aron Hirsch. 2022. Keep \textit{Only} Strong,  \textit{Semantics and Pragmatics}, 15(6). \href{https://doi.org/10.3765/sp.15.6}{https://doi.org/10.3765/sp.15.6}
 %Full DOI: https://doi.org/10.3765/sp.15.6
 %Short DOI: https://doi.org/h2wp
