Bare Interrogatives paper

--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -223,6 +223,10 @@ Joseph P. Healey Grant Program (AY 2007-2009), Office of the Vice Provost for Re
 
 \subsection*{Journal Articles}
 
+
+Alonso-Ovalle, Luis \textit{\&} Vincent Rouillard. (forthcoming) Spanish Bare Interrogatives and Number, \textit{Journal of Semantics}.
+
+
 Alonso-Ovalle, Luis \textit{\&} Elizabeth Heredia-Murillo. (2023) Concessive Scalar Particles:
 Symmetric vs. Non-Symmetric Alternatives.
 The Case of Spanish \textit{Siquiera}, \textit{Glossa: A Journal of General Linguistics}, 8(1). \href{https://doi.org/10.16995/glossa.8574}{https://doi.org/10.16995/glossa.8574}
