--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -993,11 +993,17 @@ Jason Borga, ``Topics on sluicing'', (Co-supervised with Aron Hirsch and Bernhar
 
 \subsection*{Undergraduate Honors Theses (Supervisor)}
 
+Han Yao, 2023. ``Mandarin Chinese m\u{o}u indefinites'' (Cognitive Science Program) (co-supervised with Bernhard Schwarz)
+
+Danielle Celone, 2021. ``The \textit{n'importe qu-} series." 
+
+Esmail Moghiseh, 2018. ``Contradiction free strengthening and exhaustification: Persian -\textit{i} indefinites''.
+
 Erica Brandao, ``Brazilian Portuguese \textit{Algum}.'' (ARIA award, summer 2019) (not completed.)
 
-Danielle Celone, 2021. ``The N'Importe Qu- Series." 
 
-Esmail Moghiseh, 2018. ``Contradiction free strengthening and exhaustification: Persian -\textit{I} indefinites''. 
+
+ 
 
 \subsection*{University of Massachusetts Boston (2006-2011)}
 
