--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -881,7 +881,7 @@ Jozina van der Klok, ``Tense and Aspect Markers in Javanese'',
 2012.)
 
 
-Mathieu Paill\'e, ``Local Exh'', (co-supervised with Bernhard Schwarz, successfully defended in August 2022.)
+Mathieu Paill\'e, ``Local Exh'', (co-supervised with Bernhard Schwarz, successfully defended in August 2022, K. B. Jenkes Prize, Graduate and Postdoctoral Studies, McGill University.)
 
 Justin Royer, ``Elements of (In)definiteness and Binding: A Mayan Perspective'', (co-supervised with Jessica Coon and Aron Hirsch, successfully defended in June
 2022, Arts Dissertation Award in the Humanities/ Social Sciences.)
