--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -635,6 +635,8 @@ University of T\"ubingen, January 2010 [presented by co-author.]
 
 \subsubsection*{Papers Delivered}
 
+``Weakening is external to \textit{only}'' (with Aron Hirsch), \textit{Thirty-Third Semantics and Linguistic Theory Conference}, Yale University, May 12, 2023.
+
 ``Universal Force from Exhaustification:
 Farsi \textit{Hame} \textit{-i} DPs'' (with Esmail Moghiseh), \textit{Thirty-Second Semantics and Linguistic Theory Conference}, Colegio de M\'exico, Universidad Nacional Aut\'onoma de M\'exico [virtually], June 9, 2022.
 
@@ -760,7 +762,11 @@ Men\'endez-Benito), \textit{Workshop on Reference and Discourse
 
 \subsubsection*{Poster Presentations}
 
-``Two Types of Intensional Transitive Verbs: The View from Farsi'' (with Esmail Moghiseh), \textit{The 23rd Amsterdam Colloquium}, University of Amsterdam [online presentation], December 20, 2022.
+``Structural ambiguity in pseudo-partitives:
+the case of quantity nouns'' (with Bernhard Schwarz), \textit{Thirty-Third Semantics and Linguistic Theory Conference}, Yale University, May 12, 2023.
+
+
+``Two Types of Intensional Transitive Verbs: The View from Farsi'' (with Esmail Moghiseh), \textit{The Twenty-Third Amsterdam Colloquium}, University of Amsterdam [online presentation], December 20, 2022.
 
 ``Against Wide Scope \textit{Any}'' (with Esmail Moghiseh and Jonathan Palucci), \textit{Thirty-Ninth Annual West Coast Conference on Formal Linguistics}, University of Arizona [online meeting], April 9, 2021.
 
