Book proposal CUP

--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -1329,7 +1329,7 @@ Book manuscripts: Oxford University Press
 Book proposal reviewer for Wiley-Blackwell (Fall 2009: two book
 proposals; Spring 2010: one book
 proposal; Spring 2011: one book proposal; Winter 2012: one book
-proposal; Fall 2012: one book proposal; Fall 2015: one book proposal; Winter 2016: one book proposal), Oxford University Press (Fall 2020: one book proposal.)
+proposal; Fall 2012: one book proposal; Fall 2015: one book proposal; Winter 2016: one book proposal), Oxford University Press (Fall 2020: one book proposal), Cambridge University Press (Winter 2023: one book proposal.)
 
 Reviewer for the Real Academia Espa\~nola (chapters 19 and 20 of the \textit{Nueva gramática de la lengua española} April, 2021.)
 
