--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -1301,7 +1301,7 @@ Semantics:
 
 General:
 \begin{itemize}
-\item[] \textit{Glossa} (Academic Year 2019-20: 1 manuscript.)
+\item[] \textit{Glossa} (Academic Year 2019-20: 1 manuscript, AY 2022-23: 1 manuscript)
 \item[] \textit{Journal of Pragmatics} (Academic Year
   2013-2014: 1
   manuscript.)
