New SSHRC grant, Promotion to Full

--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -107,11 +107,14 @@ M.A., 2001   & Hispanic Linguistics, University of Massachusetts at Amherst\\
 \section*{Professional Experience}
 
 \begin{tabular}{p{2.815cm}p{280pt}}
+June 2023 -- &  Full Professor, Department of Linguistics\\
+ &McGill University\\
+  & \\[-8pt]
 August 2016 -- &  Chair, Department of Linguistics\\
  May 2022 &McGill University\\
  & \\[-8pt]
 August 2015 -- & Associate Professor, Department of Linguistics\\
- & McGill University\\
+ May 2023& McGill University\\
   & \\[-8pt]
 June 2014 -- &  Associate Professor\\
 July 2015 & Department of Linguistics and Department of Languages, Literatures, and Cultures\\ 
@@ -173,6 +176,15 @@ Fellow\\
 \subsection*{Grants}
 
 \textit{Principal Investigator:}
+
+ Social Sciences and Humanities Research
+Council of Canada, Insight Grant, \textit{Grammar and possibilities across Categories: Exploring
+the Modal Anchor Hypothesis} (435-2023-0146), (2023-2027), \$242,694
+
+Social Sciences and Humanities Research
+Council of Canada, Insight Grant, \textit{Modality across Categories: Modal Indefinites and the Projection of Possibilities} (435-2018-0524), (2018-2022), \$242,686. (Co-investigators:
+Bernhard Schwarz, Junko Shimoyama.)
+
 
  Social Sciences and Humanities Research
 Council of Canada, Insight Grant, \textit{Modality across Categories: Modal Indefinites and the Projection of Possibilities} (435-2018-0524), (2018-2022), \$242,686. (Co-investigators:
